--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -94,8 +94,13 @@ We support automatic instrumentation for the following data access technologies.
 
 | Redis (StackExchange.Redis)
 | 2.0.495+
-| A DB span is automatically created for each profiled redis command peformed by StackExchange.Redis 
+| A DB span is automatically created for each profiled redis command performed by StackExchange.Redis 
 | 1.8
+
+| MongoDb (MongoDB.Driver)
+| 2.4.4+
+| A DB span is automatically created for each profiled call to MongoDB.
+| 1.9.0
 |===
 
 [float]
