--- a/docs/troubleshooting.asciidoc
+++ b/docs/troubleshooting.asciidoc
@@ -68,15 +68,15 @@ named my_log_file.log:
 <configuration>
   <!-- other sections .... -->
 <system.diagnostics>
-	<sources>
-		<source name="Elastic.Apm"> <1>
-			<listeners>
-				<add name="file" 
-					type="System.Diagnostics.TextWriterTraceListener" 
-					initializeData="my_log_file.log" />
-			</listeners>
-		</source>
-	</sources>
+  <sources>
+    <source name="Elastic.Apm"> <1>
+      <listeners>
+        <add name="file" 
+          type="System.Diagnostics.TextWriterTraceListener" 
+          initializeData="my_log_file.log" />
+      </listeners>
+    </source>
+  </sources>
 </system.diagnostics>
 </configuration>  
 ----
@@ -186,17 +186,17 @@ set ELASTIC_APM_STARTUP_HOOKS_LOGGING=1
 ----
 
 and then running the application in a context where the environment variable will be visible. In setting this value,
-an `ElasticApmAgentStartupHook.log` file is written to in the directory containing the startup hook assembly, in addition to
+an `ElasticApmAgentStartupHook.log` file is written to the directory containing the startup hook assembly, in addition to
 writing to standard output.
 
 [float]
 [[agent-overhead]]
 === The agent causes too much overhead
 
-A good place to start is [config-all-options-summary]. There are multiple settings with the `Performance` keyword which can help you tweak the agent for your needs.
+A good place to start is <<config-all-options-summary>>. There are multiple settings with the `Performance` keyword which can help you tweak the agent for your needs.
 
 The most expensive operation in the agent is typically stack trace capturing. The agent, by default, only captures stack traces for spans with a duration of 5ms or more, and with a limit of 50 stack frames.
 If this is too much in your environment, consider disabling stack trace capturing either partially or entirely:
 
-- To disable stack trace capturing for spans, but continue to capture stack traces for errors, set the [config-span-frames-min-duration] to `0` and leave the [config-stack-trace-limit] on its default.
-- To disable stack trace capturing entirely –which in most applications reduces the agent overhead dramatically– set [config-stack-trace-limit] to `0`.
+- To disable stack trace capturing for spans, but continue to capture stack traces for errors, set the <<config-span-frames-min-duration>> to `0` and leave the <<config-stack-trace-limit>> on its default.
+- To disable stack trace capturing entirely –which in most applications reduces the agent overhead dramatically– set <<config-stack-trace-limit>> to `0`.
