Add Cosmos Db integrations to documentation (#1473)
This commit adds the Cosmos DB to the documentation.

Co-authored-by: Brandon Morelli <bmorelli25@gmail.com>

--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -14,6 +14,7 @@ On .NET Core the agent also supports auto instrumentation without any code chang
 * <<setup-ef6>>
 * <<setup-sqlclient>>
 * <<setup-stackexchange-redis>>
+* <<setup-azure-cosmosdb>>
 * <<setup-azure-servicebus>>
 * <<setup-azure-storage>>
 * <<setup-mongo-db>>
@@ -395,6 +396,22 @@ connection.UseElasticApm();
 A callback is registered with the `IConnectionMultiplexer` to provide a profiling session for each transaction and span that captures redis commands
 sent with `IConnectionMultiplexer`.
 
+[[setup-azure-cosmosdb]]
+=== Azure Cosmos DB
+
+[float]
+==== Quick start
+
+Instrumentation can be enabled for Azure Cosmos DB by referencing https://www.nuget.org/packages/Elastic.Apm.Azure.CosmosDb[`Elastic.Apm.Azure.CosmosDb`]
+package and subscribing to diagnostic events.
+
+[source, csharp]
+----
+Agent.Subscribe(new AzureCosmosDbDiagnosticsSubscriber());
+----
+
+Diagnostic events from `Microsoft.Azure.Cosmos`, `Microsoft.Azure.DocumentDb`, and `Microsoft.Azure.DocumentDb.Core` are captured as DB spans.
+
 [[setup-azure-servicebus]]
 === Azure Service Bus
 
@@ -467,7 +484,7 @@ For Azure Blob storage, a new span is created when there is a current transactio
 * A page blob is created, uploaded, downloaded, or deleted
 * A block blob is created, copied, uploaded, downloaded or deleted
 
-For Azure File Share storage, a new span is crated when there is a current transaction and when
+For Azure File Share storage, a new span is created when there is a current transaction and when
 
 * A share is created or deleted
 * A directory is created or deleted
