Add profiler auto instrumentation docs (#16)
This commit adds profiler auto instrumentation documentation.
Documentation includes

- Supported instrumentations
- Setup for common application hosts/environments
- Supported environment variables

Closes #13

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -12,6 +12,8 @@ include::./intro.asciidoc[]
 
 include::./setup.asciidoc[]
 
+include::./packages.asciidoc[]
+
 include::./supported-technologies.asciidoc[]
 
 include::./configuration.asciidoc[]
@@ -19,8 +21,6 @@ include::./configuration.asciidoc[]
 include::./public-api.asciidoc[]
 
 include::./metrics.asciidoc[]
-
-// OpenTracing API
 
 include::./log-correlation.asciidoc[]
 
